docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesAsyncJob__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__MaioEndpoint__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesAssignmentObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assignment Object</label>
        <referenceTo>sfsp__SalesAssignmentObject__c</referenceTo>
        <relationshipLabel>Sales Async Jobs</relationshipLabel>
        <relationshipName>SalesAsyncJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Splunk__c</fullName>
        <label>Splunk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sales Async Job</label>
    <nameField>
        <displayFormat>Job-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Async Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>